# arxiv2word

./: .deepsource.toml  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  ToDo.md  docker-compose.yml  main.py  makefile  mypy.ini  pyproject.toml
.github/workflows/: mypy-check.yml
src/: arxiv_to_word.py
