[tool.poetry]
name = "arxiv2word"
version = "0.1.0"
description = ""
authors = ["Fgeeha <33605615+Fgeeha@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.11.9"
aiofiles = "^24.1.0"
icecream = "^2.1.3"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
types-aiofiles = "^24.1.0.20240626"
types-beautifulsoup4 = "^4.12.0.20241020"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["src",]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    ".env.template",
    ".env",
]
